--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -13,9 +13,9 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintBottom_toTopOf="@id/dashLine1"
+            app:layout_constraintDimensionRatio="8:7"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintDimensionRatio="8:7"
             app:layout_constraintTop_toTopOf="parent">
 
             <androidx.viewpager2.widget.ViewPager2
@@ -33,8 +33,8 @@
                 android:backgroundTint="@color/light_green"
                 android:scaleType="centerInside"
                 android:src="@drawable/ic_add_white"
-                app:fabSize="mini"
                 app:borderWidth="0dp"
+                app:fabSize="mini"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -58,8 +58,8 @@
             android:backgroundTint="@color/light_green"
             android:maxWidth="@dimen/_30sdp"
             android:maxHeight="@dimen/_30sdp"
-            app:borderWidth="0dp"
             android:src="@drawable/ic_shuffle_green"
+            app:borderWidth="0dp"
             app:layout_constraintBottom_toTopOf="@id/fragBottom"
             app:layout_constraintEnd_toStartOf="@id/dashLine2"
             app:layout_constraintStart_toEndOf="@id/dashLine1"
@@ -76,18 +76,18 @@
             app:layout_constraintStart_toEndOf="@id/btnShuffle"
             app:layout_constraintTop_toBottomOf="@id/fragTop" />
 
-<!--        <com.google.android.material.floatingactionbutton.FloatingActionButton-->
-<!--            android:id="@+id/btnFav"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginEnd="@dimen/_30sdp"-->
-<!--            app:srcCompat="@drawable/fav_button_click"-->
-<!--            android:backgroundTint="@color/white"-->
-<!--            app:fabSize="mini"-->
-<!--            app:borderWidth="0dp"-->
-<!--            app:layout_constraintBottom_toTopOf="@id/fragBottom"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"-->
-<!--            app:layout_constraintTop_toBottomOf="@id/fragTop" />-->
+        <!--        <com.google.android.material.floatingactionbutton.FloatingActionButton-->
+        <!--            android:id="@+id/btnFav"-->
+        <!--            android:layout_width="wrap_content"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:layout_marginEnd="@dimen/_30sdp"-->
+        <!--            app:srcCompat="@drawable/fav_button_click"-->
+        <!--            android:backgroundTint="@color/white"-->
+        <!--            app:fabSize="mini"-->
+        <!--            app:borderWidth="0dp"-->
+        <!--            app:layout_constraintBottom_toTopOf="@id/fragBottom"-->
+        <!--            app:layout_constraintEnd_toEndOf="parent"-->
+        <!--            app:layout_constraintTop_toBottomOf="@id/fragTop" />-->
         <ToggleButton
             android:id="@+id/btnFav"
             android:layout_width="@dimen/_35sdp"
@@ -115,9 +115,9 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintDimensionRatio="8:7"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintDimensionRatio="8:7"
             app:layout_constraintTop_toBottomOf="@id/dashLine1">
 
             <androidx.viewpager2.widget.ViewPager2
@@ -134,8 +134,8 @@
                 android:layout_marginBottom="@dimen/_20sdp"
                 android:backgroundTint="@color/light_green"
                 android:src="@drawable/ic_add_white"
-                app:fabSize="mini"
                 app:borderWidth="0dp"
+                app:fabSize="mini"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
