--- a/app/src/main/res/drawable/dash_line_gray.xml
+++ b/app/src/main/res/drawable/dash_line_gray.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="line">
     <stroke
+        android:width="2dp"
         android:color="@color/light_gray"
         android:dashWidth="20px"
-        android:dashGap="10px"
-        android:width="2dp"/>
+        android:dashGap="10px" />
 </shape>
