--- a/app/src/main/res/drawable/fav_button_click.xml
+++ b/app/src/main/res/drawable/fav_button_click.xml
@@ -1,6 +1,4 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/round_red_like_button"
-       android:state_checked="true"/>
-    <item android:drawable="@drawable/round_white_like_button"
-        android:state_checked="false" />
+    <item android:drawable="@drawable/round_red_like_button" android:state_checked="true" />
+    <item android:drawable="@drawable/round_white_like_button" android:state_checked="false" />
 </selector>
