--- a/app/src/main/res/layout/item_bottom_viewpager.xml
+++ b/app/src/main/res/layout/item_bottom_viewpager.xml
@@ -4,8 +4,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
+        android:layout_height="match_parent">
 
         <ImageView
             android:id="@+id/ivBottom"
